--- a/app/Resources/views/show/base.html.twig
+++ b/app/Resources/views/show/base.html.twig
@@ -21,6 +21,14 @@
         {% endblock %}
     {% endembed %}
 
+    {% for label, messages in app.flashes %}
+    <div class="alert alert-{{ label }}" role="alert">
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+    {% endfor %}
+
     <!-- Page Content -->
     <div class="container">
         <div class="row">
