--- a/app/Resources/views/show/list.html.twig
+++ b/app/Resources/views/show/list.html.twig
@@ -8,11 +8,38 @@
     <!-- Blog Post -->
     {% for show in shows %}
     <div class="card mb-4">
+
         <img class="card-img-top" src="{{ asset('upload/' ~ show.mainPictureFileName) }}" alt="Show image">
+        {#
+         {% set img = '' %}
+        {%  if show.dbSource == constant('AppBundle\\Entity\\Show::DATA_SOURCE_DB')%}
+            {% set img = asset('upload/' ~ show.mainPictureFileName)) %}
+        {% elseif show.dbSource == constant('AppBundle\\Entity\\Show::DATA_SOURCE_OMDB')%}
+            {% set img = show.mainPicture %}
+        {% endif %}
+        <img class="card-img-top" src="{{ img }}" alt={{ show.name }}>
+        #}
+
         <div class="card-body">
             <h2 class="card-title">{{ show.name ~ ' ' ~ show.dbSource}}</h2>
             <p class="card-text">{{ show.abstract }}</p>
-            <a href="#" class="btn btn-primary">Read More &rarr;</a>
+
+            {%  if show.dbSource == constant('AppBundle\\Entity\\Show::DATA_SOURCE_DB')%}
+                <a href="{{ path('show_update', {'id': show.id}) }}" class="btn btn-primary">Update &rarr;</a>
+
+
+                {#
+                //TODO
+                <form action="{{ path('show_delete') }}" method="POST">
+                    <input type="hidden" name="show_id" value="{{ show.id }}" />
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('delete_show') }}" />
+                    <input type="hidden" name="_method" value="DELETE" />
+
+                    <button type="submit" class="btn btn-danger">Delete x</button>
+                </form>
+                #}
+            {% endif %}
+
         </div>
         <div class="card-footer text-muted">
             Created {{ show.releaseDate | date('d/m/y') }} by
