create user, persist, login, logout

--- a/app/Resources/views/show/createShow.html.twig
+++ b/app/Resources/views/show/createShow.html.twig
@@ -15,6 +15,6 @@
 
         {{ form_rest(showForm) }}
 
-        <input type="submit" value="Create" />
+        <button type="submit" class="btn btn-primary">Create</button>
     {{ form_end(showForm) }}
 {% endblock %}
