--- a/app/Resources/views/user/create.html.twig
+++ b/app/Resources/views/user/create.html.twig
@@ -1,7 +1,7 @@
 
 {% extends "show/base.html.twig" %}
 {% block pageHeading %}
-    Create user
+    Create User
 {% endblock %}
 
 {% block content %}
