--- a/app/Resources/views/show/base.html.twig
+++ b/app/Resources/views/show/base.html.twig
@@ -6,7 +6,7 @@
     <meta name="description" content="">
 
     <meta name="author" content="">
-    <title>Blog Home - Start Bootstrap Template</title>
+    <title>SHOWROOM</title>
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <!-- Custom styles for this template -->
