--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -11,6 +11,7 @@
                 <th scope="col">Fullname</th>
                 <th scope="col">Email</th>
                 <th scope="col">Roles</th>
+                <th scope="col">Shows</th>
             </tr>
         </thread>
         <tbody>
@@ -20,6 +21,17 @@
                     <td>{{ user.fullname }}</td>
                     <td>{{ user.username }}</td>
                     <td>{{ user.roles  | join(', ')}}</td>
+                    <td>
+
+
+
+                        {% for show in user.shows %}
+                            {{ show.name }}{% if not loop.last %},{% endif %}
+                        {% else %}
+                            No shows yet!
+                        {% endfor %}
+
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
