--- a/app/Resources/views/show/list.html.twig
+++ b/app/Resources/views/show/list.html.twig
@@ -21,7 +21,14 @@
         #}
 
         <div class="card-body">
-            <h2 class="card-title">{{ show.name ~ ' (' ~ show.dbSource ~ ')'}}</h2>
+            <div>
+                {%  if show.dbSource == constant('AppBundle\\Entity\\Show::DATA_SOURCE_OMDB')%}
+                    <img  src="{{ asset('upload/imdb.gif') }}" alt="IMDB image" height="50px" width="120px" style="float:right;">
+                {% endif %}
+                <h2 class="card-title">{{ show.name }}</h2>
+            </div>
+
+
             <p class="card-text">{{ show.abstract }}</p>
 
             {%  if show.dbSource == constant('AppBundle\\Entity\\Show::DATA_SOURCE_DB')%}
