Create a very first user

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -11,5 +11,6 @@
         <label for="password">Password</label>
         <input type="password" name="password" class="form-control"/>
         <button type="submit" class="btn btn-primary">Connect</button>
+        <a href="{{ path('user_create_first') }}" class="btn btn-primary">Create User</a>
     </form>
 {% endblock %}
